--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,15 @@
 </head>
 
 <body>
+  <!-- S loading 动画，对应的样式在 src/css/loading.scss -->
   <div id="o2_loading" class="loading">
     <div class="btns">
       <a class="btn begin">开始播放视频</a>
     </div>
   </div>
+  <!-- E loading -->
+
+  <!-- S 主体内容 -->
   <div id="o2_main" class="main">
     <div class="wrapper">
       <video id="video" class="video" preload="auto" playsinline src="http://wqs.jd.com/promote/superfestival/superfestival.mp4" width="1" height="1" type="video/mp4"></video>
@@ -27,11 +31,16 @@
     </div>
     <div class="poster"></div>
   </div>
+  <!-- E 主体内容 -->
+
+  <!-- S KV 页 -->
   <div id="o2_end" class="end hide">
     <div class="btns">
       <a class="btn replay">再看一次</a>
     </div>
   </div>
+  <!-- E KV 页 -->
+
   <div class="tip"></div>
 </body>
 
